lib_LIBRARIES = libglutpp.a

libglutpp_a_SOURCES = \
		glutpp/master.h		glutpp/master.cpp \
		glutpp/window.h		glutpp/window.cpp \
		glutpp/object.h 	glutpp/object.cpp \
		glutpp/shader.h 	glutpp/shader.cpp \
		glutpp/uniform.h	glutpp/uniform.cpp \
		glutpp/attribute.h	glutpp/attribute.cpp \
		glutpp/texture.h	glutpp/texture.cpp \
		glutpp/program.h	glutpp/program.cpp \
		glutpp/camera.h		glutpp/camera.cpp \
		glutpp/light.h		glutpp/light.cpp \
		glutpp/material.h	glutpp/material.cpp \
		glutpp/gui/layout.h	glutpp/gui/layout.cpp

		
#glutpp/plane.h glutpp/plane.cpp
#glutpp/sphere.h glutpp/sphere.cpp

nobase_include_HEADERS = \
		glutpp/master.h \
		glutpp/window.h \
		glutpp/object.h \
		glutpp/shader.h \
		glutpp/texture.h \
		glutpp/program.h \
		glutpp/uniform.h \
		glutpp/attribute.h \
		glutpp/camera.h \
		glutpp/light.h \
		glutpp/material.h \
		glutpp/shaders/prog_0/vs.glsl \
		glutpp/shaders/prog_0/fs.glsl \
		glutpp/shaders/prog1/vs.glsl \
		glutpp/shaders/prog1/fs.glsl \
		glutpp/shaders/exp_map/vs.glsl \
		glutpp/shaders/exp_map/fs.glsl \
		glutpp/shaders/prog3/vs.glsl \
		glutpp/shaders/prog3/fs.glsl \
		glutpp/objects/cube.obj \
		glutpp/gui/layout.h

#glutpp/plane.h
#glutpp/sphere.h

CXXFLAGS = -std=c++0x -DGLUTPP_PREFIX=${includedir} -D_DEBUG
LIBS = -lglutpp

