target_link_libraries(box PhysX3CHECKED)
target_link_libraries(box SimulationControllerCHECKED)
target_link_libraries(box LowLevelCHECKED)
target_link_libraries(box LowLevelClothCHECKED)
target_link_libraries(box PhysXProfileSDKCHECKED)
target_link_libraries(box PhysXVisualDebuggerSDKCHECKED)
target_link_libraries(box PhysX3ExtensionsCHECKED)
target_link_libraries(box SceneQueryCHECKED)
target_link_libraries(box PhysX3CommonCHECKED)
target_link_libraries(box PhysX3CharacterKinematicCHECKED)
target_link_libraries(box PhysX3VehicleCHECKED)
target_link_libraries(box PhysX3CookingCHECKED)
target_link_libraries(box PvdRuntimeCHECKED)
target_link_libraries(box RepX3CHECKED)
target_link_libraries(box PxTaskCHECKED)

